tests/ui/aggregate_types_postgres/fail/stddev_any_requires_explicit_cast.rs
use drizzle::core::expr::{raw_non_null, stddev_pop};
use drizzle::postgres::prelude::*;

fn main() {
    let _ = stddev_pop(raw_non_null::<PostgresValue, drizzle::postgres::types::Any>("'1'"));
}
